enhancing the visuals of the exception dialog (e.g. always make the "report bug" link visible)

--- a/annis-gui/src/main/webapp/VAADIN/themes/annis/annis.scss
+++ b/annis-gui/src/main/webapp/VAADIN/themes/annis/annis.scss
@@ -210,10 +210,10 @@ $font-size: 10pt;
   }
 
   .exception-message-caption {
-    font-size: 18pt;
+    font-size: 12pt;
   }
   .exception-message-content {
-    font-size: 15pt;
+    font-size: 12pt;
     background-color: #ffcccc;
     border-style: dashed;
     border-width: 1px;
